# cpp-cmake-project-template

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
app_factorial/: CMakeLists.txt
app_factorial/src/: main.cpp
cmake/: CTestConfig.cmake  Pipeline.cmake
factorial_doctest_fakeit/: CMakeLists.txt
factorial_doctest_fakeit/include/: factorial.h
factorial_doctest_fakeit/src/: factorial.cpp
factorial_doctest_fakeit/test/: CMakeLists.txt  factorial_test.cpp
